[stage-4] fix overwrite